docs: correct stale claims the front-door PR does not cover
Scoped deliberately around #318, which owns the README headline/Requirements
and the CONTRIBUTING "Java Version" section. Those corrections are not
duplicated here; #318's versions are the better ones and also drop
--enable-preview from the JFR examples, which this branch never touched.

What is left is the set #318 does not reach, each verified against source
rather than against a sibling doc:

- support-matrix.md — the JDK row is the consumer-facing supported baseline and
  was the worst of the set ("Maven itself must run on JDK 26").
- CONTRIBUTING.md "Local Environment" — instructed `docker compose up -d`
  against a root docker-compose.yml provisioning Postgres and Redis. No compose
  file exists, JdbcCitadelRepository does not exist, and Community has no Redis
  dependency. Container-backed tests are Testcontainers-driven and tagged out of
  the default build; replaced with that, plus a pointer to the consumer guide.
- README.md — Module Map omitted community-kafka and diagnostics-cli, both real
  reactor modules.
- architecture.md — baseline line, and a Lazy Constants claim that
  LazyConstant.of(...) backs the config caches; every occurrence in the tree is
  javadoc describing the semantic being mirrored, and the actual mechanism is
  the Supplier + AtomicReference CAS pattern. Also adds three subsystem docs
  (http, scheduling, storage) missing from Related Documentation.
- subsystems/bootstrap.md — two status lines, one of which called JDK 26 an LTS.
- modules/06-testkit.md — the fixture snippet called exchange.respond(200, "ok"),
  which does not compile: HttpExchange has no (int, String) overload.

Plus the inbound links to the new guides from README, architecture.md,
06-testkit.md, and the TCK README.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>