@@ -152,28 +152,33 @@ mvn test -pl exeris-kernel-tck
 
 ## Local Environment
 
-The full local environment requires only **Docker or Podman**. No cloud account, no managed service,
-no port-forwarding magic. This is a direct consequence of ADR-001 (Cloud Agnostic Infrastructure).
+**There is no local stack to start.** The repository has no `docker-compose.yml`, and nothing needs
+one. Tests that require Postgres or Kafka start their own containers through Testcontainers and tear
+them down again — so the only prerequisite is a running **Docker or Podman** daemon. This is a direct
+consequence of ADR-001 (Cloud Agnostic Infrastructure): no cloud account, no managed service, no
+port-forwarding magic.
 
-### Start the Local Stack
+Container images are pinned in the test sources, e.g.
+`new PostgreSQLContainer<>("postgres:16")` in
+`exeris-kernel-community/src/test/java/eu/exeris/kernel/community/persistence/CommunityPersistenceIsolationLeakTckIT.java:37`.
+
+### You do not need a daemon for the default build
+
+Container-backed tests are tagged (`integration`, `continuity`, `stress`) and are **excluded from
+`mvn clean install`**. A machine with no Docker daemon still gets a green default build — and that
+green build is not evidence those tests pass. Run them explicitly when you touch what they cover:
 
 ```bash
-docker compose up -d
+mvn -pl <module> -DincludedGroups=integration -DexcludedGroups= test
 ```
 
-The `docker-compose.yml` at the repository root provisions:
-- **PostgreSQL 16** on `localhost:5432` (used by `JdbcCitadelRepository` in Community tier)
-- **Redis 7** on `localhost:6379` (session/distributed cache, used by Security subsystem)
+The exclusion list is per-module — see the `excludedGroups` property in each module's `pom.xml`
+(e.g. `exeris-kernel-community-kafka/pom.xml:31`) for which tags that module holds back and why.
 
-Default credentials are aligned with the repository's test fixtures. Do not change them without updating the corresponding test fixtures.
+### Consuming the kernel rather than contributing to it
 
-### Stopping the Stack
-
-```bash
-docker compose down
-```
-
-Data is ephemeral by default (no named volume mounts). Each `up` starts with a clean database.
+Different requirements — notably no `--enable-preview` — and different coordinates. See
+[docs/guides/01-platform-and-dependencies.md](docs/guides/01-platform-and-dependencies.md).
 
 ---
 
